--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -4,22 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Usage Example\n",
-    "\n"
+    "# Usage Example"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-06-29T23:42:24.522755Z",
+     "end_time": "2023-06-29T23:42:24.551757Z"
+    }
    },
    "source": [
     "## Importing the NonPredictive class from the non-predictive module:"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 18
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import sys\n",
@@ -31,8 +36,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-19T20:17:38.664551Z",
-     "end_time": "2023-05-19T20:17:38.676575Z"
+     "start_time": "2023-06-30T00:08:43.210151Z",
+     "end_time": "2023-06-30T00:08:43.598786Z"
     }
    }
   },
@@ -42,16 +47,22 @@
     "## Instance the model and add the features:"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-06-29T23:42:27.665453Z",
+     "end_time": "2023-06-29T23:42:27.696763Z"
+    }
+   },
+   "outputs": [],
+   "execution_count": 22
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-19T20:17:39.828612Z",
-     "end_time": "2023-05-19T20:17:39.846612Z"
+     "start_time": "2023-06-30T00:08:45.327858Z",
+     "end_time": "2023-06-30T00:08:45.353901Z"
     }
    },
    "outputs": [],
@@ -63,20 +74,26 @@
     "    weight=0.5,\n",
     "    options_df=pd.DataFrame([\n",
     "            {\"label\": \"Up to 50K\", \"is_ICP\": False, \"points\": 0},\n",
-    "            {\"label\": \"50K - 100K\", \"is_ICP\": True, \"points\": 0},\n",
-    "            {\"label\": \"100K - 200K\", \"is_ICP\": False, \"points\": 0},\n",
-    "            {\"label\": \"More than 200K\", \"is_ICP\": False, \"points\": 0},\n",
+    "            {\"label\": \"50K - 100K\", \"is_ICP\": True},\n",
+    "            {\"label\": \"100K - 200K\", \"is_ICP\": False},\n",
+    "            {\"label\": \"More than 200K\", \"is_ICP\": False}\n",
     "        ])\n",
     ")\n",
     "feature_b = Feature(\n",
     "    name=\"Industry\",\n",
     "    weight=0.25,\n",
-    "    options_df=pd.DataFrame({\n",
-    "        'label': ['Other', 'Agriculture', 'Transportation', 'Healthcare', 'Manufacturing',\n",
-    "                  'Education', 'Finance', 'Technology', 'Retail', 'Telecom'],\n",
-    "        'is_ICP': [False, False, False, False, False, True, True, True, False, False],\n",
-    "        'points': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-    "    })\n",
+    "    options_df=pd.DataFrame([\n",
+    "            {\"label\": \"Other\", \"is_ICP\": False},\n",
+    "            {\"label\": \"Agriculture\", \"is_ICP\": False},\n",
+    "            {\"label\": \"Transportation\", \"is_ICP\": False},\n",
+    "            {\"label\": \"Healthcare\", \"is_ICP\": False},\n",
+    "            {\"label\": \"Manufacturing\", \"is_ICP\": False},\n",
+    "            {\"label\": \"Education\", \"is_ICP\": True},\n",
+    "            {\"label\": \"Finance\", \"is_ICP\": True},\n",
+    "            {\"label\": \"Technology\", \"is_ICP\": True},\n",
+    "            {\"label\": \"Retail\", \"is_ICP\": False},\n",
+    "            {\"label\": \"Telecom\", \"is_ICP\": False},\n",
+    "        ])\n",
     ")\n",
     "\n",
     "feature_c = Feature(\n",
@@ -99,19 +116,25 @@
     "You may set preview=True to check the proposed changes"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-06-29T23:42:32.057697Z",
+     "end_time": "2023-06-29T23:42:32.094722Z"
+    }
+   },
+   "outputs": [],
+   "execution_count": 23
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "              label  is_ICP  points    Feature Name\n0         Up to 50K   False     0.0   Monthly Users\n1        50K - 100K    True    50.0   Monthly Users\n2       100K - 200K   False    75.0   Monthly Users\n3    More than 200K   False   100.0   Monthly Users\n4             Other   False     0.0        Industry\n5       Agriculture   False    10.0        Industry\n6    Transportation   False    20.0        Industry\n7        Healthcare   False    30.0        Industry\n8     Manufacturing   False    40.0        Industry\n9         Education    True    50.0        Industry\n10          Finance    True    50.0        Industry\n11       Technology    True    50.0        Industry\n12           Retail   False    75.0        Industry\n13          Telecom   False   100.0        Industry\n14       Up to $50K   False     0.0  Mkt Investment\n15      50k - $100K    True    50.0  Mkt Investment\n16     100k - $200K   False    62.5  Mkt Investment\n17    $200K - $300K   False    75.0  Mkt Investment\n18    $300K - $400K   False    87.5  Mkt Investment\n19  More than $400K   False   100.0  Mkt Investment",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>label</th>\n      <th>is_ICP</th>\n      <th>points</th>\n      <th>Feature Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Up to 50K</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>Monthly Users</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50K - 100K</td>\n      <td>True</td>\n      <td>50.0</td>\n      <td>Monthly Users</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>100K - 200K</td>\n      <td>False</td>\n      <td>75.0</td>\n      <td>Monthly Users</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>More than 200K</td>\n      <td>False</td>\n      <td>100.0</td>\n      <td>Monthly Users</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Other</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Agriculture</td>\n      <td>False</td>\n      <td>10.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Transportation</td>\n      <td>False</td>\n      <td>20.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Healthcare</td>\n      <td>False</td>\n      <td>30.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Manufacturing</td>\n      <td>False</td>\n      <td>40.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Education</td>\n      <td>True</td>\n      <td>50.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Finance</td>\n      <td>True</td>\n      <td>50.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Technology</td>\n      <td>True</td>\n      <td>50.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>Retail</td>\n      <td>False</td>\n      <td>75.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>Telecom</td>\n      <td>False</td>\n      <td>100.0</td>\n      <td>Industry</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>Up to $50K</td>\n      <td>False</td>\n      <td>0.0</td>\n      <td>Mkt Investment</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>50k - $100K</td>\n      <td>True</td>\n      <td>50.0</td>\n      <td>Mkt Investment</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>100k - $200K</td>\n      <td>False</td>\n      <td>62.5</td>\n      <td>Mkt Investment</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>$200K - $300K</td>\n      <td>False</td>\n      <td>75.0</td>\n      <td>Mkt Investment</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>$300K - $400K</td>\n      <td>False</td>\n      <td>87.5</td>\n      <td>Mkt Investment</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>More than $400K</td>\n      <td>False</td>\n      <td>100.0</td>\n      <td>Mkt Investment</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,8 +145,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-19T20:17:41.446511Z",
-     "end_time": "2023-05-19T20:17:41.474530Z"
+     "start_time": "2023-06-30T00:08:47.576836Z",
+     "end_time": "2023-06-30T00:08:47.609242Z"
     }
    }
   },
@@ -132,15 +155,17 @@
    "metadata": {},
    "source": [
     "## Compute lambda values for a single lead:"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-05-19T20:17:44.672367Z",
-     "end_time": "2023-05-19T20:17:44.727631Z"
+     "start_time": "2023-06-30T00:08:50.141458Z",
+     "end_time": "2023-06-30T00:08:50.157458Z"
     }
    },
    "outputs": [
@@ -148,7 +173,7 @@
      "data": {
       "text/plain": "78.57"
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,18 +196,19 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "  Monthly Users     Industry Mkt Investment  lambda\n0    50K - 100K   Technology  $300K - $400K   78.57\n1    50K - 100K       Retail   100k - $200K   60.71\n2     Up to 50K  Agriculture    50k - $100K   38.57",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Monthly Users</th>\n      <th>Industry</th>\n      <th>Mkt Investment</th>\n      <th>lambda</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50K - 100K</td>\n      <td>Technology</td>\n      <td>$300K - $400K</td>\n      <td>78.57</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50K - 100K</td>\n      <td>Retail</td>\n      <td>100k - $200K</td>\n      <td>60.71</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Up to 50K</td>\n      <td>Agriculture</td>\n      <td>50k - $100K</td>\n      <td>38.57</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,8 +226,46 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-19T20:17:46.751258Z",
-     "end_time": "2023-05-19T20:17:46.783256Z"
+     "start_time": "2023-06-30T00:08:51.658876Z",
+     "end_time": "2023-06-30T00:08:51.722523Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Assess qualification for each lead:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "  Monthly Users     Industry Mkt Investment  lambda  qualified\n0    50K - 100K   Technology  $300K - $400K   78.57       True\n1    50K - 100K       Retail   100k - $200K   60.71       True\n2     Up to 50K  Agriculture    50k - $100K   38.57      False",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Monthly Users</th>\n      <th>Industry</th>\n      <th>Mkt Investment</th>\n      <th>lambda</th>\n      <th>qualified</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50K - 100K</td>\n      <td>Technology</td>\n      <td>$300K - $400K</td>\n      <td>78.57</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50K - 100K</td>\n      <td>Retail</td>\n      <td>100k - $200K</td>\n      <td>60.71</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Up to 50K</td>\n      <td>Agriculture</td>\n      <td>50k - $100K</td>\n      <td>38.57</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['qualified'] = df.apply(\n",
+    "    lambda row: model.assess_qualification(row.to_dict()),\n",
+    "    axis=1\n",
+    ")\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-06-30T00:08:55.278055Z",
+     "end_time": "2023-06-30T00:08:55.293055Z"
     }
    }
   },
@@ -212,31 +276,17 @@
    },
    "source": [
     "## Removing features"
-   ]
+   ],
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-19T20:17:50.068532Z",
-     "end_time": "2023-05-19T20:17:50.082214Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "model.remove_features(['Mkt Investment'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-19T20:17:50.898857Z",
-     "end_time": "2023-05-19T20:17:50.907815Z"
+     "start_time": "2023-06-30T00:08:56.762907Z",
+     "end_time": "2023-06-30T00:08:56.779936Z"
     }
    },
    "outputs": [
@@ -244,12 +294,13 @@
      "data": {
       "text/plain": "2"
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "model.remove_features(['Mkt Investment'])\n",
     "len(model.features)"
    ]
   },
@@ -258,25 +309,26 @@
    "metadata": {},
    "source": [
     "### Compute new lambda after removing a feature:"
-   ]
+   ],
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-05-19T20:18:03.507427Z",
-     "end_time": "2023-05-19T20:18:03.527411Z"
+     "start_time": "2023-06-30T00:08:58.179381Z",
+     "end_time": "2023-06-30T00:08:58.207400Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "  Monthly Users     Industry Mkt Investment  lambda  new_lambda  delta_percent\n0    50K - 100K   Technology  $300K - $400K   78.57        50.0     -36.362479\n1    50K - 100K       Retail   100k - $200K   60.71        55.0      -9.405370\n2     Up to 50K  Agriculture    50k - $100K   38.57         2.0     -94.814623",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Monthly Users</th>\n      <th>Industry</th>\n      <th>Mkt Investment</th>\n      <th>lambda</th>\n      <th>new_lambda</th>\n      <th>delta_percent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50K - 100K</td>\n      <td>Technology</td>\n      <td>$300K - $400K</td>\n      <td>78.57</td>\n      <td>50.0</td>\n      <td>-36.362479</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50K - 100K</td>\n      <td>Retail</td>\n      <td>100k - $200K</td>\n      <td>60.71</td>\n      <td>55.0</td>\n      <td>-9.405370</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Up to 50K</td>\n      <td>Agriculture</td>\n      <td>50k - $100K</td>\n      <td>38.57</td>\n      <td>2.0</td>\n      <td>-94.814623</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "  Monthly Users     Industry Mkt Investment  lambda  qualified  new_lambda  \\\n0    50K - 100K   Technology  $300K - $400K   78.57       True        50.0   \n1    50K - 100K       Retail   100k - $200K   60.71       True        55.0   \n2     Up to 50K  Agriculture    50k - $100K   38.57      False         2.0   \n\n   delta_percent  \n0     -36.362479  \n1      -9.405370  \n2     -94.814623  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Monthly Users</th>\n      <th>Industry</th>\n      <th>Mkt Investment</th>\n      <th>lambda</th>\n      <th>qualified</th>\n      <th>new_lambda</th>\n      <th>delta_percent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50K - 100K</td>\n      <td>Technology</td>\n      <td>$300K - $400K</td>\n      <td>78.57</td>\n      <td>True</td>\n      <td>50.0</td>\n      <td>-36.362479</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50K - 100K</td>\n      <td>Retail</td>\n      <td>100k - $200K</td>\n      <td>60.71</td>\n      <td>True</td>\n      <td>55.0</td>\n      <td>-9.405370</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Up to 50K</td>\n      <td>Agriculture</td>\n      <td>50k - $100K</td>\n      <td>38.57</td>\n      <td>False</td>\n      <td>2.0</td>\n      <td>-94.814623</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,46 +344,6 @@
     "\n",
     "df.head()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-19T20:18:10.329379Z",
-     "end_time": "2023-05-19T20:18:10.350544Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1.0"
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "round(sum( # proof of normalized weights sum to 1\n",
-    "    [i.normalized_weight**2 for i in model.features]),\n",
-    "    model.round_decimals \n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-05-19T20:17:29.611917Z",
-     "end_time": "2023-05-19T20:17:29.729916Z"
-    }
-   }
   }
  ],
  "metadata": {
